test/libsolidity/syntaxTests/nameAndTypeResolution/553_no_address_members_on_contract_balance_v050.sol
pragma experimental "v0.5.0";
contract C {
    function f() public {
        this.balance;
    }
}
// ----
// TypeError: (77-89): Member "balance" not found or not visible after argument-dependent lookup in contract C
